--- a/clock.html
+++ b/clock.html
@@ -243,6 +243,82 @@
                 100% { transform: rotate(var(--d)); }
             }
 
+            @keyframes _0_to_9_c1_b {
+                0%   { transform: rotate(var(--u)); }
+                15%  { transform: rotate(var(--u)); }
+                20%  { transform: rotate(var(--r)); }
+                65%  { transform: rotate(var(--r)); }
+                70%  { transform: rotate(var(--n)); }
+                75%  { transform: rotate(var(--n)); }
+                80%  { transform: rotate(var(--r)); }
+                95%  { transform: rotate(var(--r)); }
+                100% { transform: rotate(var(--u)); }
+            }
+
+            @keyframes _0_to_9_c1_a {
+                0%   { transform: rotate(var(--d)); }
+                15%  { transform: rotate(var(--d)); }
+                20%  { transform: rotate(var(--l)); }
+                25%  { transform: rotate(var(--l)); }
+                30%  { transform: rotate(var(--d)); }
+                35%  { transform: rotate(var(--d)); }
+                40%  { transform: rotate(var(--u)); }
+                65%  { transform: rotate(var(--u)); }
+                70%  { transform: rotate(var(--n)); }
+                75%  { transform: rotate(var(--n)); }
+                80%  { transform: rotate(var(--u)); }
+                95%  { transform: rotate(var(--u)); }
+                100% { transform: rotate(var(--d)); }
+            }
+
+            @keyframes _0_to_9_c2_b {
+                0%   { transform: rotate(var(--u)); }
+                45%  { transform: rotate(var(--u)); }
+                50%  { transform: rotate(var(--l)); }
+                65%  { transform: rotate(var(--l)); }
+                70%  { transform: rotate(var(--u)); }
+                75%  { transform: rotate(var(--u)); }
+                80%  { transform: rotate(var(--l)); }
+                95%  { transform: rotate(var(--l)); }
+                100% { transform: rotate(var(--u)); }
+            }
+
+            @keyframes _0_to_9_c2_a {
+                0%   { transform: rotate(var(--d)); }
+                15%  { transform: rotate(var(--d)); }
+                20%  { transform: rotate(var(--l)); }
+                45%  { transform: rotate(var(--l)); }
+                50%  { transform: rotate(var(--r)); }
+                65%  { transform: rotate(var(--r)); }
+                70%  { transform: rotate(var(--d)); }
+                75%  { transform: rotate(var(--d)); }
+                80%  { transform: rotate(var(--u)); }
+                95%  { transform: rotate(var(--u)); }
+                100% { transform: rotate(var(--d)); }
+            }
+
+            @keyframes _0_to_9_c3_b {
+                0%   { transform: rotate(var(--u)); }
+                5%   { transform: rotate(var(--u)); }
+                10%  { transform: rotate(var(--n)); }
+                15%  { transform: rotate(var(--n)); }
+                20%  { transform: rotate(var(--u)); }
+                45%  { transform: rotate(var(--u)); }
+                50%  { transform: rotate(var(--l)); }
+                65%  { transform: rotate(var(--l)); }
+                70%  { transform: rotate(var(--u)); }
+                100% { transform: rotate(var(--u)); }
+            }
+
+            @keyframes _0_to_9_c3_a {
+                0%   { transform: rotate(var(--d)); }
+                5%   { transform: rotate(var(--d)); }
+                10%  { transform: rotate(var(--n)); }
+                15%  { transform: rotate(var(--n)); }
+                20%  { transform: rotate(var(--d)); }
+                100% { transform: rotate(var(--d)); }
+            }
+
             #s2 .a0:before { transform: rotate(var(--d)); }
             #s2 .a0:after  { transform: rotate(var(--r)); }
             #s2 .a1:before { transform: rotate(var(--l)); }
