--- a/clock.html
+++ b/clock.html
@@ -409,6 +409,26 @@
                 100% { transform: rotate(var(--u)); }
             }
 
+            @keyframes _0_to_9_d3_b {
+                0%   { transform: rotate(var(--u)); }
+                5%   { transform: rotate(var(--u)); }
+                10%  { transform: rotate(var(--n)); }
+                15%  { transform: rotate(var(--n)); }
+                20%  { transform: rotate(var(--u)); }
+                100% { transform: rotate(var(--u)); }
+            }
+
+            @keyframes _0_to_9_d3_a {
+                0%   { transform: rotate(var(--d)); }
+                5%   { transform: rotate(var(--d)); }
+                10%  { transform: rotate(var(--n)); }
+                15%  { transform: rotate(var(--n)); }
+                20%  { transform: rotate(var(--l)); }
+                25%  { transform: rotate(var(--l)); }
+                30%  { transform: rotate(var(--d)); }
+                100% { transform: rotate(var(--d)); }
+            }
+
             #s2 .a0:before { transform: rotate(var(--d)); }
             #s2 .a0:after  { transform: rotate(var(--r)); }
             #s2 .a1:before { transform: rotate(var(--l)); }
