--- a/clock.html
+++ b/clock.html
@@ -80,62 +80,48 @@
                 90% {content: "9";}
             }
 
+            /* '0' to '9' */
+
+            /* a */
+
             @keyframes _0_to_9_a1_a {
-                0%   { transform: rotate(var(--r));  }
-                35%  { transform: rotate(var(--r));  }
-                40%  { transform: rotate(var(--d)); }
-                45%  { transform: rotate(var(--d)); }
-                50%  { transform: rotate(var(--r));  }
-                100% { transform: rotate(var(--r));  }
+                0%,  35%  { transform: rotate(var(--r));  }
+                40%, 45%  { transform: rotate(var(--d)); }
+                50%, 100% { transform: rotate(var(--r));  }
             }
 
             @keyframes _0_to_9_a2_b {
-                0%   { transform: rotate(var(--l)); }
-                35%  { transform: rotate(var(--l)); }
-                40%  { transform: rotate(var(--d));  }
-                45%  { transform: rotate(var(--d));  }
-                50%  { transform: rotate(var(--l)); }
-                100% { transform: rotate(var(--l)); }
+                0%,  35%  { transform: rotate(var(--l)); }
+                40%, 45%  { transform: rotate(var(--d));  }
+                50%, 100% { transform: rotate(var(--l)); }
             }
 
             @keyframes _0_to_9_a2_a {
-                0%   { transform: rotate(var(--r));  }
-                5%   { transform: rotate(var(--r));  }
-                10%  { transform: rotate(var(--d)); }
-                15%  { transform: rotate(var(--d)); }
-                20%  { transform: rotate(var(--r));  }
-                100% { transform: rotate(var(--r));  }
+                0%,  5%   { transform: rotate(var(--r));  }
+                10%, 15%  { transform: rotate(var(--d)); }
+                20%, 100% { transform: rotate(var(--r));  }
             }
 
             @keyframes _0_to_9_a3_b {
-                0%   { transform: rotate(var(--l)); }
-                5%   { transform: rotate(var(--l)); }
-                10%  { transform: rotate(var(--n)); }
-                15%  { transform: rotate(var(--n)); }
-                20%  { transform: rotate(var(--l)); }
-                100% { transform: rotate(var(--l)); }
+                0%,  5%   { transform: rotate(var(--l)); }
+                10%, 15%  { transform: rotate(var(--n)); }
+                20%, 100% { transform: rotate(var(--l)); }
             }
 
             @keyframes _0_to_9_a3_a {
-                0%   { transform: rotate(var(--d));  }
-                5%   { transform: rotate(var(--d));  }
-                10%  { transform: rotate(var(--n)); }
-                15%  { transform: rotate(var(--n)); }
-                20%  { transform: rotate(var(--d));  }
-                100% { transform: rotate(var(--d));  }
+                0%,  5%   { transform: rotate(var(--d));  }
+                10%, 15%  { transform: rotate(var(--n)); }
+                20%, 100% { transform: rotate(var(--d));  }
             }
 
+            /* b */
+
             @keyframes _0_to_9_b0_a {
-                0%   { transform: rotate(var(--d)); }
-                5%   { transform: rotate(var(--d)); }
-                10%  { transform: rotate(var(--r)); }
-                35%  { transform: rotate(var(--r)); }
-                40%  { transform: rotate(var(--d)); }
-                65%  { transform: rotate(var(--d)); }
-                70%  { transform: rotate(var(--r)); }
-                75%  { transform: rotate(var(--r)); }
-                80%  { transform: rotate(var(--d)); }
-                100% { transform: rotate(var(--d)); }
+                0%,  5%   { transform: rotate(var(--d)); }
+                10%, 35%  { transform: rotate(var(--r)); }
+                40%, 65%  { transform: rotate(var(--d)); }
+                70%, 75%  { transform: rotate(var(--r)); }
+                80%, 100% { transform: rotate(var(--d)); }
             }
 
             @keyframes _0_to_9_b1_b {
@@ -208,6 +194,8 @@
                 70%  { transform: rotate(var(--d)); }
                 100% { transform: rotate(var(--d)); }
             }
+
+            /* c */
 
             @keyframes _0_to_9_c0_b {
                 0%   { transform: rotate(var(--u)); }
@@ -319,6 +307,8 @@
                 100% { transform: rotate(var(--d)); }
             }
 
+            /* d */
+
             @keyframes _0_to_9_d0_b {
                 0%   { transform: rotate(var(--u)); }
                 5%   { transform: rotate(var(--u)); }
@@ -429,6 +419,80 @@
                 100% { transform: rotate(var(--d)); }
             }
 
+            /* e */
+
+            @keyframes _0_to_9_e0_b {
+                0%   { transform: rotate(var(--u)); }
+                5%   { transform: rotate(var(--u)); }
+                10%  { transform: rotate(var(--r)); }
+                15%  { transform: rotate(var(--r)); }
+                20%  { transform: rotate(var(--u)); }
+                25%  { transform: rotate(var(--u)); }
+                30%  { transform: rotate(var(--r)); }
+                35%  { transform: rotate(var(--r)); }
+                40%  { transform: rotate(var(--n)); }
+                45%  { transform: rotate(var(--n)); }
+                50%  { transform: rotate(var(--r)); }
+                55%  { transform: rotate(var(--r)); }
+                60%  { transform: rotate(var(--u)); }
+                65%  { transform: rotate(var(--u)); }
+                70%  { transform: rotate(var(--n)); }
+                75%  { transform: rotate(var(--n)); }
+                80%  { transform: rotate(var(--u)); }
+                85%  { transform: rotate(var(--u)); }
+                90%  { transform: rotate(var(--r)); }
+                95%  { transform: rotate(var(--r)); }
+                100% { transform: rotate(var(--u)); }
+            }
+
+            @keyframes _0_to_9_e0_a {
+                0%   { transform: rotate(var(--d)); }
+                35%  { transform: rotate(var(--d)); }
+                40%  { transform: rotate(var(--n)); }
+                45%  { transform: rotate(var(--n)); }
+                50%  { transform: rotate(var(--d)); }
+                65%  { transform: rotate(var(--d)); }
+                70%  { transform: rotate(var(--n)); }
+                75%  { transform: rotate(var(--n)); }
+                80%  { transform: rotate(var(--d)); }
+                100% { transform: rotate(var(--d)); }
+            }
+
+            @keyframes _0_to_9_e1_b {
+                0%   { transform: rotate(var(--u)); }
+                25%  { transform: rotate(var(--u)); }
+                30%  { transform: rotate(var(--l)); }
+                35%  { transform: rotate(var(--l)); }
+                40%  { transform: rotate(var(--n)); }
+                45%  { transform: rotate(var(--n)); }
+                50%  { transform: rotate(var(--l)); }
+                55%  { transform: rotate(var(--l)); }
+                60%  { transform: rotate(var(--u)); }
+                65%  { transform: rotate(var(--u)); }
+                70%  { transform: rotate(var(--n)); }
+                75%  { transform: rotate(var(--n)); }
+                80%  { transform: rotate(var(--u)); }
+                85%  { transform: rotate(var(--u)); }
+                90%  { transform: rotate(var(--l)); }
+                95%  { transform: rotate(var(--l)); }
+                100% { transform: rotate(var(--u)); }
+            }
+
+            @keyframes _0_to_9_e1_a {
+                0%, 5%   { transform: rotate(var(--r)); }
+                10%, 15% { transform: rotate(var(--l)); }
+                20%  { transform: rotate(var(--r)); }
+                35%  { transform: rotate(var(--r)); }
+                40%  { transform: rotate(var(--n)); }
+                45%  { transform: rotate(var(--n)); }
+                50%  { transform: rotate(var(--r)); }
+                65%  { transform: rotate(var(--r)); }
+                70%  { transform: rotate(var(--n)); }
+                75%  { transform: rotate(var(--n)); }
+                80%  { transform: rotate(var(--r)); }
+                100% { transform: rotate(var(--r)); }
+            }
+
             #s2 .a0:before { transform: rotate(var(--d)); }
             #s2 .a0:after  { transform: rotate(var(--r)); }
             #s2 .a1:before { transform: rotate(var(--l)); }
@@ -464,6 +528,15 @@
             #s2 .d2:after  { animation: _0_to_9_d2_a var(--secs) linear infinite; }
             #s2 .d3:before { animation: _0_to_9_d3_b var(--secs) linear infinite; }
             #s2 .d3:after  { animation: _0_to_9_d3_a var(--secs) linear infinite; }
+
+            #s2 .e0:before { animation: _0_to_9_e0_b var(--secs) linear infinite; }
+            #s2 .e0:after  { animation: _0_to_9_e0_a var(--secs) linear infinite; }
+            #s2 .e1:before { animation: _0_to_9_e1_b var(--secs) linear infinite; }
+            #s2 .e1:after  { animation: _0_to_9_e1_a var(--secs) linear infinite; }
+            #s2 .e2:before { animation: _0_to_9_e2_b var(--secs) linear infinite; }
+            #s2 .e2:after  { animation: _0_to_9_e2_a var(--secs) linear infinite; }
+            #s2 .e3:before { animation: _0_to_9_e3_b var(--secs) linear infinite; }
+            #s2 .e3:after  { animation: _0_to_9_e3_a var(--secs) linear infinite; }
 
         </style>
     </head>
